crates/plotnik-lib/tests/05-typegen/quantifiers/error_plus_internal_capture_needs_row.txt
Bad = {(identifier) @c}+
==== diagnostics ====
error: quantifier `+` contains captures (`@c`) but has no struct capture
 --> query.ptk:1:7
  |
1 | Bad = {(identifier) @c}+
  |       ^^^^^^^^^^^^^^^^^^
  |
help: add a struct capture: `{...}+ @name`
